--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "python.linting.pylintEnabled": true,
     "python.linting.lintOnSave": true,
     "python.formatting.provider": "autopep8",
+    "python.dataScience.sendSelectionToInteractiveWindow": false,
     "[python]": {
         "editor.formatOnSave": true,
         "editor.formatOnPaste": true
